[package]
name = "rs-upp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
aes = "0.8.4"
crc = "3.2.1"
ecb = "0.1.2"
hidapi-rusb = "1.3.3"
log = { version = "0.4.21", features = ["serde"] }
rusb = "0.9.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serialport = "4.3.0"
url = "2.5.0"
